--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 
-    <h1>Hola Mundo 3</h1>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
 
-  </body>
+</body>
 </html>
