--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    body{text-align> center;}
+  </style>
   <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -9,7 +12,7 @@
 <title>Page Title</title>
 </head>
 <body>
-
+  
   <div class="row">
     <div class="col s12 m6">
       <div class="card blue-grey darken-1">
