--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
+  <!--<style>
     body{text-align: center;}
-  </style>
+  </style>-->
+  <!--Boostrap-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -13,21 +20,33 @@
 </head>
 <body>
   
-  <div class="row">
-    <div class="col s12 m6">
-      <div class="card blue-grey darken-1">
-        <div class="card-content white-text">
-          <span class="card-title">Card Title 2</span>
-          <p>I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively.</p>
-        </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-          <a href="#">This is a link</a>
-        </div>
-      </div>
+  <!--Navbar-->
+  <nav>
+    <div class="nav-wrapper" id="navbarcolor">
+      <a class="brand-logo">
+        <div class="row align-items-center">
+        <img src="/logotipo.png" id="logotipomanzana">
+        <!--Para esconder en dispositvos pequeños el texto-->
+          <label id="fuenteclinica" class="col l3 m3 s3 hide-on-med-and-down">Healthy Clinic</label>
+          </div>
+      </a>
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a class="nav-link" href="index.html"><i class="large material-icons right">home</i>HOME</a></li>
+        <li><a class="nav-link" href="#"><i class="large material-icons right">face</i>Especialidades</a></li>
+        <li><a class="nav-link" href="#"><i class="large material-icons right">content_paste</i>Agendar cita</a></li>
+        <li><a class="nav-link" href="#"><i class="large material-icons right">input</i>Iniciar sesión</a></li>
+        <li><a class="nav-link" href="#"><i class="large material-icons right">person_add</i>Registrate</a></li>
+      </ul>
+      <ul class="side-nav" id="mobile-demo">
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="#">Especialidades</a></li>
+        <li><a href="#">Agendar cita</a></li>
+        <li><a href="#">Iniciar sesión</a></li>
+        <li><a href="#">Registrate</a></li>
+      </ul>
     </div>
-  </div>
+  </nav>
 
 </body>
 </html>
