--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <!--<style>
     body{text-align: center;}
   </style>-->
+  <link rel="stylesheet" type="text/css" href="/estilos.css">
   <!--Boostrap-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
