--- a/index.html
+++ b/index.html
@@ -48,6 +48,31 @@
       </ul>
     </div>
   </nav>
+  
+  <!--Imagen centro opaca MATERIALIZE-->
+
+<footer class="footer" id="contenedorcentro">
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+      <h1 class="white-text"style="text-align: center;"><strong>La mejor forma de cuidar tu salud</strong> </h1><br>
+      <h4 class="white-text" style="text-align: center;"><strong>Crea una cita en línea</strong></h4>
+        <!--Alinear boton en el centro-->
+        <br>
+        <div class="row align-items-center">
+          <div class="col text-center">
+            <button id="agendarcita" class="btn btn-large waves-effect red darken-3 white-text">Agendar cita</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container-fluid">
+      © 2020 DriverSoft Copyright
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
