--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
     </div>
   </div>
 </footer>
+    
+ <!--Div class container CONOCENOS-->
+<div class="conocenos">
+  <h3 style="text-align: center; color: white"><strong> Conócenos</strong></h3>
+</div>
 
 </body>
 </html>
