--- a/index.html
+++ b/index.html
@@ -72,5 +72,51 @@
   <h3 style="text-align: center; color: white"><strong> Conócenos</strong></h3>
 </div>
 
+<!--Iconos rojos BOOTSTRAP-->
+<!--Animación de zoom-->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6 col-md-6 col-lg-6" style="text-align: center;">
+      <div class="contenedoriconos">
+      <img src="/medicos.png" class="iconos">
+      <div class="container-fluid">
+      <h3>Nuestros médicos</h3>
+        <p class="parrafo">Conoce nuestros médicos que estan altamente capacitados en sus respectivas especialidades que estarán preparados
+        para atenderte en nuestra clínica.</p>
+        </div>
+      </div>
+    </div>
+  
+    <div class="col-sm-6 col-md-6 col-lg-6" style="text-align: center;" >
+      <div class="contenedoriconos">
+        <img src="/cita.png" class="iconos">
+        <h3>Agenda citas en línea</h3>
+        <p class="parrafo">Registrate en nuestra plataforma y pide tu primera
+        cita desde la comodidad de tu casa en tan pocos pasos. Nota: Se requiere cuenta, por lo que deberá registrarse primero antes de agendar una cita con nosotros.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 col-md-6 col-lg-6" style="text-align: center;">
+      <div class="contenedoriconos">
+      <img src="/calidad.png" class="iconos">
+      <h3>Alta calidad</h3>
+      <p class="parrafo">Somos una empresa altamente desarrollada
+      con todos los parámetros de calidad en tanto material
+      como personal que siempre procura el bienestar de los clientes como prioridad.</p>
+      </div>
+    </div>
+  
+    <div class="col-sm-6 col-md-6 col-lg-6" style="text-align: center;" >
+      <div class="contenedoriconos">
+        <img src="/veraz.png" class="iconos">
+        <h3>Veracidad</h3>
+        <p class="parrafo">Personal altamente profesional comprometidos 
+        con la verdad y veracidad de diagnósticos. Transmitiendo seguridad y prescripciones exactas.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
