--- a/index.html
+++ b/index.html
@@ -117,6 +117,60 @@
     </div>
   </div>
 </div>
+    
+<!--DIV class quienes somos-->
+<div class="conocenos">
+  <h3 style="text-align: center; color: white"><strong> ¿Quienés somos?</strong></h3>
+</div>
+
+<!--quines somo texto y medico BOOTSTRAP-->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6 col-md-6 col-lg-6" id="apartadosomos">
+      <!--rounded, indicar que no sea tan cuadrado-->
+      <div class="conocenos rounded">
+        <h3 style="text-align: center; color: white"><strong>Nuestra empresa:</strong></h3>
+      
+          <p class="parrafo" style="color: white;">Healthy Clinic es una empresa especializada
+          que se dedica al sector salud de tal manera que 
+          mediante nuestra clínica, ofrecemos atención medica
+          a las personas que la requieran, contando con un gran
+          número de especialistas que desempeñan su labor día
+          a día de manera ética y profesional contando con certificaciones
+          anuales que respaldan la calidad de atención ofrecida.</p>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-6 col-lg-6" style="text-align: center;">
+      <img src="/cirugia.jpg" class="img-thumbnail" id="cirugia">
+    </div>
+
+  </div>
+</div>
+
+<!--Nuestra visión-->
+<div class="conocenos">
+  <h3 style="text-align: center; color: white"><strong>Nuestra visión</strong></h3>
+</div>
+
+<!--Nuestra visión texto e imagen BOOTSTRAP-->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-6 col-md-6 col-lg-6" id="apartadosomos">
+      <img src="/vision.jpg" class="img-thumbnail" id="cirugia">
+    </div>
+    <div class="col-sm-6 col-md-6 col-lg-6" id="apartadosomos" style="text-align: center;">
+      <!--Rounded para contenedor esquinas redondeadas-->
+      <div class="conocenos rounded">
+        <h3 style="text-align: center; color: white"><strong>Nuestra empresa:</strong></h3>
+          <p class="parrafo" style="color: white;">Healthy Clinic busca obtener el mayor impacto en la salud de las
+          personas, de esta manera estamos actualizando y escalando 
+          nuestros servicios periódicamente con el fin de ofrecer mayor
+          comodidad a nuestros clientes y poder atender la atención que 
+          estos requieran conforme incrementa la demanda.</p>
+      </div>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
