--- a/index.html
+++ b/index.html
@@ -171,6 +171,47 @@
     </div>
   </div>
 </div>
+    
+ <!--DIV ven a visitarnos-->
+<div class="conocenos">
+  <h3 style="text-align: center; color: white"><strong>Ven a visitarnos</strong></h3>
+</div>
+
+<!--Mapa ven a visitarnos BOOTSTRAP-->
+<div class="container-fluid">
+  <div class="row">
+  <div class="col-sm-12 col-md-12 col-lg-12">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5661.27855468415!2d-114.79849606225844!3d32.4669040559689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d64e0f948baa35%3A0x62e712b11f4eb267!2sSubdelegacion%20Imss%20San%20Luis%20Rio!5e0!3m2!1ses-419!2smx!4v1605228351168!5m2!1ses-419!2smx" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false" tabindex="0"></iframe>
+  </div>
+  </div>
+</div>
+
+<!--Información de contacto, parte final-->
+<div class="contacto" style="padding-bottom: 20px;">
+  <div class="row">
+    <div class="col-sm-3 col-sm-3 col-lg-3" id="manzanacontacto">
+    <img src="/logotipo.png" id="manzanacontacto">
+    <h3 style="color: white; font-size: 36px;"><strong>Healthy Clinic</strong></h3>
+    </div>
+    <div class="col-sm-3 col-sm-3 col-lg-3">
+      <h3 class="conocenos rounded"><strong>Páginas</strong></h3>
+      <a class="link" href="Home2.php">HOME</a><br>
+      <a class="link" href="#">Especialidades</a><br>
+      <a class="link" href="#">Agendar citas</a>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <h3 class="conocenos rounded"><strong>Links</strong></h3>
+      <a class="link" href="#">Terminos de uso</a><br>
+      <a class="link" href="#">Politica de privacidad</a><br>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3">
+      <h3 class="conocenos rounded"><strong>Contacto</strong></h3>
+      <label class="link">653-224-54-56</label><br>
+      <labeñ class="link">Healthyclinic@gmail.com</label><br>
+      <label class="link">+52 653 224 5456</label>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
