--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   <!--Imagen centro opaca MATERIALIZE-->
 
 <footer class="footer" id="contenedorcentro">
-  <div class="container">
-    <div class="row">
+  <div class="container align-items-center">
+    <div class="row center">
       <div class="col l6 s12">
       <h1 class="white-text"style="text-align: center;"><strong>La mejor forma de cuidar tu salud</strong> </h1><br>
       <h4 class="white-text" style="text-align: center;"><strong>Crea una cita en línea</strong></h4>
