--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!--Imagen centro opaca MATERIALIZE-->
 
 <footer class="footer" id="contenedorcentro">
-  <div class="container-fluid yellow center align-items-center">
+  <div class="container-fluid blue center-align">
     <div class="row center">
       <div class="col l6 s12">
       <h1 class="white-text"style="text-align: center;"><strong>La mejor forma de cuidar tu salud</strong> </h1><br>
