--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container-fluid">
-      © 2020 DriverSoft Copyright
+      IDGS7-3 Porras Carlos
     </div>
   </div>
 </footer>
